--- a/admin/package.json
+++ b/admin/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.11.0",
     "lucide-react": "^0.509.0",
     "react": "^19.0.0",
