--- a/admin/package.json
+++ b/admin/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2",
+    "react-to-print": "^3.1.1",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
